# satf

./: .gitignore  AUTHORS  CMakeLists.txt  README  generate_plots.sh  sat.pro  satf.pro  satf.sh
src/: algorithm.cpp  algorithm.h  bubbleextsort.h  bubblesort.h  compareless.h  cookamealsort.h  cookkimsort.h  cookxxxsort.h  countless.h  heapsort.h  main.cpp  melsort.h  mergesort.h  quicksort.h  shellsort.h  sortrunner.cpp  sortrunner.h  splaysort.h  splaytree.h  splitsort.h  utility.cpp  utility.h
